--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "bulma": "^0.7.1",
     "element-ui": "^2.4.5",
     "github-api": "^3.0.0",
     "vue": "^2.5.17",
